# humor_saver

./: .env.example  .gitattributes  .gitignore  Makefile  docker-compose.yml
apps/api/: Cargo.toml  Dockerfile
apps/api/src/: db.rs  embedding.rs  error.rs  handlers.rs  main.rs  qdrant.rs
apps/collector/: Cargo.toml  Dockerfile
apps/collector/src/: db.rs  main.rs  sources.rs
apps/collector/src/collectors/: clien.rs  mod.rs  rss.rs
apps/discoverer/: Dockerfile  requirements.txt
apps/discoverer/src/: bigkinds.py  db.py  main.py  rss_discovery.py
apps/nllb/: Dockerfile  server.py
apps/nlp/: Dockerfile  requirements.txt
apps/nlp/src/: db.py  embedding.py  keywords.py  main.py  qdrant.py  translator.py
apps/web/: .dockerignore  Dockerfile  package.json  vite.config.js
apps/web/src/: app.html  hooks.server.js
apps/web/src/lib/: api.js
apps/web/src/routes/: +layout.server.js  +layout.svelte  +page.server.js  +page.svelte
apps/web/src/routes/articles/[id]/: +page.server.js  +page.svelte
apps/web/src/routes/feed/more/: +server.js
apps/web/src/routes/list/: +page.server.js  +page.svelte
apps/web/src/routes/login/: +page.server.js  +page.svelte
apps/web/src/routes/search/: +page.server.js  +page.svelte
apps/web/src/routes/sitemap.xml/: +server.js
apps/web/src/routes/sources/: +page.server.js  +page.svelte
apps/web/src/routes/trends/: +page.server.js  +page.svelte
apps/web/static/: robots.txt  sitemap.xml
data/: sources.json
migrations/: 0001_init.sql  0002_extend.sql  0003_discoverer.sql  0004_translation.sql
